# TestQML

./: CMakeLists.txt  README.md  build.py
qml/: OpenFileDialog.qml  mainWindow.qml
src/: error.h  main.cpp  reader.h  visualiser.h
